--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.4",
     "class-transformer": "^0.5.1",
+    "json2csv": "^5.0.7",
     "moment": "^2.29.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
